mise a jour fichier swagger
