# config/swagger.yaml
@@ -3,7 +3,7 @@ info:
   version: 1.0.0
   title: Projet 1 NoSQL MongoDB par Souleymane KODJO
   description: Application de gestion de produits de mode avec NodeJS et MongoDB
-host: localhost:3000
+host: localhost:3000/api/v1
 basePath: /
 schemes:
   - http
@@ -52,8 +52,36 @@ paths:
             $ref: '#/definitions/FashionProduct'
         404:
           description: Aucun produit de mode trouvé avec l'ID spécifié
-
-  /products/category/{category}:
+    delete:
+      summary: Supprimer un produit de mode par ID
+      description: Supprime un produit de mode spécifié par son ID.
+      parameters:
+        - name: id
+          in: path
+          description: L'ID du produit de mode
+          required: true
+          type: string
+      responses:
+        200:
+          description: Le produit de mode a été supprimé avec succès
+          schema:
+            $ref: '#/definitions/FashionProduct'
+        404:
+          description: Aucun produit de mode trouvé avec l'ID spécifié
+  /categories:
+    get:
+      summary: Récupérer la liste des catégoriea
+      description: Récupère les categories .
+      responses:
+        200:
+          description: Une liste des categories de mode
+          schema:
+            type: array
+            items:
+              $ref: '#/definitions/FashionProduct'
+        404:
+          description: Aucun categories de mode trouvé pour la base de donnees
+  /categories/{category}:
     get:
       summary: Récupérer les produits d'une catégorie spécifique
       description: Récupère les produits de mode appartenant à une catégorie spécifique.
@@ -73,7 +101,20 @@ paths:
         404:
           description: Aucun produit de mode trouvé pour la catégorie spécifiée
 
-  /products/brand/{brand}:
+  /brands/:
+    get:
+      summary: Récupérer les marques
+      description: Récupère les marque.
+      responses:
+        200:
+          description: Une liste des marques de mode
+          schema:
+            type: array
+            items:
+              $ref: '#/definitions/FashionProduct'
+        404:
+          description: Aucun marque de mode trouvé pour la base de donnees
+  /brands/{brand}:
     get:
       summary: Récupérer les produits d'une marque spécifique
       description: Récupère les produits de mode d'une marque spécifique.
@@ -93,7 +134,7 @@ paths:
         404:
           description: Aucun produit de mode trouvé pour la marque spécifiée
 
-  /products/onSale:
+  /onSale:
     get:
       summary: Récupérer les produits en promotion
       description: Récupère les produits de mode actuellement en promotion.
@@ -105,7 +146,7 @@ paths:
             items:
               $ref: '#/definitions/FashionProduct'
 
-  /products/category/{category}/averageRating:
+  /categories/{category}/averageRating:
     get:
       summary: Calculer la moyenne des évaluations pour une catégorie donnée
       description: Calcule et renvoie la moyenne des évaluations des produits de mode de la catégorie spécifiée.
@@ -125,7 +166,7 @@ paths:
                 type: number
                 format: float
 
-  /products/bestRated:
+  /bestRated:
     get:
       summary: Récupérer les produits avec la meilleure évaluation
       description: Renvoie les produits de mode avec la meilleure évaluation globale.
@@ -137,7 +178,7 @@ paths:
             items:
               $ref: '#/definitions/FashionProduct'
 
-  /products/count:
+  /count:
     get:
       summary: Récupérer le nombre total de produits
       description: Récupère le nombre total de produits de mode enregistrés dans la base de données.
@@ -150,35 +191,7 @@ paths:
               count:
                 type: integer
 
-  /products/sortedByDiscount:
-    get:
-      summary: Récupérer les produits triés par ordre de réduction
-      description: Renvoie les produits de mode triés par pourcentage de réduction décroissant.
-      responses:
-        200:
-          description: Une liste de produits de mode triés par ordre de réduction
-          schema:
-            type: array
-            items:
-              $ref: '#/definitions/FashionProduct'
 
-  /products/discountGreaterThan/{percentage}:
-    get:
-      summary: Récupérer les produits avec une réduction supérieure à un certain pourcentage
-      description: Renvoie les produits de mode avec une réduction supérieure à un pourcentage spécifié.
-      parameters:
-        - name: percentage
-          in: path
-          description: Le pourcentage de réduction spécifié
-          required: true
-          type: number
-      responses:
-        200:
-          description: Une liste de produits de mode avec une réduction supérieure au pourcentage spécifié
-          schema:
-            type: array
-            items:
-              $ref: '#/definitions/FashionProduct'
 
 definitions:
   FashionProduct:
@@ -248,4 +261,3 @@ definitions:
         type: string
       color:
         type: string
-
