# routes/fashionProductRoutes.js
@@ -4,16 +4,11 @@ const fashionProductController = require("../controllers/fashionProductControlle
 const fashionProductQueryController = require("../controllers/fashionProductQueryController");
 const fashionProductAnalyticsController = require("../controllers/fashionProductAnalyticsController");
 const userController = require("../controllers/userController");
-// const { generateToken } = require("../config/auth");
-const { verifyToken } = require("../utils/jwt");
-// Routes d'authentification
+
 // Route pour l'enregistrement d'un nouvel utilisateur
 router.post("/register", userController.registerUser);
 // Route pour la connexion d'un utilisateur
 router.post("/login", userController.loginUser);
-
-//router.post("/logout", userController.logout);
-//router.post("/token", userController.refreshToken);
 
 // Routes CRUD✅
 router.get("/products", fashionProductController.getAllFashionProducts);
@@ -46,27 +41,20 @@ router.get(
 	fashionProductAnalyticsController.getAverageRatingByCategory
 );
 //✅
+
 router.get(
 	"/bestRated",
 	fashionProductAnalyticsController.getBestRatedProducts
 );
-//nombre de produit par category
+
 //✅
+
 router.get(
 	"/category/:category/count",
 	fashionProductAnalyticsController.getProductCountByCategory
 );
 //✅
+
 router.get("/count", fashionProductAnalyticsController.getProductCount);
-//To be deleted
-router.get(
-	"/sortedByDiscount",
-	fashionProductAnalyticsController.getProductsSortedByDiscount
-);
-//To be deleted
-router.get(
-	"/discountGreaterThan/:percentage",
-	fashionProductAnalyticsController.getProductsDiscountGreaterThan
-);
 
 module.exports = router;
